# learn-faster-core

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGES.md  CHANGES_CODEX.md  DOCKER_CONNECTION.md  Dockerfile.backend  Goal.md  Makefile  README.md  SYSTEM_ARCHITECTURE.md  debug_extraction.py  docker-compose.yml  ingestion_error.txt  main.py  openapi.yaml  pyproject.toml  pytest.ini  test_markitdown.py  test_md.py  test_processor.py  test_pypdf.py
database/: init.sql
docs/: PROJECT_OVERVIEW.md  PROJECT_UPDATE_SUMMARY.md  WHITEPAPER.md  transcripts.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1770628575367-cc07469efe84d.mjs
frontend/scripts/: copy-pdfjs-assets.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
on_api/: __init__.py  chat.py  db_utils.py  models.py  notebooks.py  notes.py  router_main.py  sources.py
open_notebook/: __init__.py
open_notebook/commands/: __init__.py  notebook.py
scripts/: check_neo4j_constraints.py  generate_openapi.py  inspect_db.py  migrate_cached_lessons.py  migrate_documents_db.py  opik_eval.py  results.txt  rq_worker.py  run_migrations.py  setup_test_db.py  setup_wsl_connection.py  start_services.sh  test_llm.py  verify_graph_overhaul.py  verify_integration.py  verify_pruning.py
src/: config.py  dependencies.py
src/database/: __init__.py  connections.py  graph_storage.py  init_db.py  migrations.py  neo4j_conn.py  orm.py
src/ingestion/: document_processor.py  ingestion_engine.py  vector_storage.py  youtube_utils.py
src/models/: agent.py  enums.py  fitbit.py  orm.py  schemas.py
src/navigation/: navigation_engine.py  user_tracker.py
src/observability/: opik.py
src/path_resolution/: content_retriever.py  path_resolver.py
src/queue/: ingestion_queue.py
src/routers/: ai.py  ai_settings.py  analytics.py  cognitive.py  curriculum.py  dashboard.py  documents.py  fitbit.py  flashcards.py  folders.py  goals.py  legacy.py  multidoc_graph.py  navigation.py  notifications.py  practice.py  resources.py  study.py
src/services/: activity_service.py  ai_settings.py  cognitive_service.py  concept_tutor.py  content_filter.py  curriculum_service.py  daily_plan_service.py  dashboard_service.py  document_service.py  email_service.py  fitbit_service.py  goal_agent.py  goal_negotiation_service.py  ingestion_orchestrator.py  knowledge_graph_service.py  llm_config_resolver.py  llm_service.py  memory_service.py  model_limits.py  negotiation_scheduler.py  ocr_service.py  open_notebook_sync.py  practice_engine_service.py  prompts.py  reading_time.py  srs_service.py  time_tracking_service.py  web_extractor.py  weekly_digest_scheduler.py  weekly_digest_service.py
src/static/: app.js  (+2 more)
tests/: conftest.py  test_api.py  test_content_retrieval.py  test_deletion_sync.py  test_fitbit_agent_usage.py  test_fitbit_integration.py  test_fitbit_routes.py  test_ingestion_flow.py  test_multidoc_graph.py  test_navigation_logic.py  test_new_features.py  test_new_routes.py  test_null_byte_sanitization.py  test_path_resolution.py  test_property_content_chunking.py  test_property_data_completeness.py  test_property_document_conversion.py  test_property_duplicate_handling.py  test_property_error_validation.py  test_property_graph_extraction.py  test_property_initialization.py  test_property_name_normalization.py  test_property_schema_validation.py  test_property_storage_consistency.py  test_pruning.py  test_reading_time.py  test_robustness.py  test_semantic_tagging.py  test_simple.py  test_youtube_ingestion.py
(+136 files in other folders)
