[project]
name = "learn-fast-core"
version = "0.1.0"
description = "LearnFast Core Engine - A hybrid Graph-RAG learning platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "neo4j>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "markitdown[all]>=0.0.1a2",
    "ollama>=0.1.0",
    "pgvector>=0.2.0",
    "python-dotenv>=1.0.0",
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "youtube-transcript-api==0.6.3",
    "yt-dlp>=2025.12.8",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.1",
    "openai>=1.0.0",
    "groq>=0.4.0",
    "pydantic-settings>=2.0.0,<2.5.0",
    "opik",
    "pdfplumber>=0.11.0",
    "textstat>=0.7.3",
    "langdetect>=1.0.9",
    "pytz>=2025.2",
    "magic-pdf>=0.6.0",
    "pymilvus>=2.3.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "markupsafe<3.0.0",
    "pypdf>=6.6.2",
    "langchain>=0.3.27",
    "langgraph>=1.0.1",
    "tiktoken>=0.12.0",
    "langchain-community>=0.3.21",
    "surrealdb>=1.0.8",
    "podcast-creator>=0.2.6",
    "esperanto>=2.13.0",
    "loguru>=0.7.3",
    "httpx>=0.27.2",
    "langchain-openai>=0.3.35",
    "langchain-anthropic>=0.3.22",
    "langchain-ollama>=0.2.1",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "surreal-commands>=1.3.1",
    "ai-prompter>=0.3.1",
    "tomli>=2.4.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "trafilatura>=1.4.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
